Update Sorting to Header Only Library. Add Basic Sorting Tests

--- a/sorting/CMakeLists.txt
+++ b/sorting/CMakeLists.txt
@@ -1,17 +1,31 @@
 add_library(
     Sorting
+    INTERFACE
+)
+
+set(INCLUDE_FILES
+    include/InsertionSort.h include/InsertionSort.tpp
 )
 
 target_sources(
     Sorting
 
-    PRIVATE
-    src/InsertionSort.cpp
-    
-    PUBLIC
+    INTERFACE
     FILE_SET HEADERS
     TYPE HEADERS
     BASE_DIRS include
     FILES
-        include/InsertionSort.h
+        ${INCLUDE_FILES}
+)
+
+target_include_directories(
+    Sorting
+    INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include"
+    "$<INSTALL_INTERFACE:include>"
+)
+
+add_custom_target(SortingHeaders ALL
+    SOURCES
+    ${INCLUDE_FILES}
 )
