--- a/searching/CMakeLists.txt
+++ b/searching/CMakeLists.txt
@@ -12,7 +12,7 @@ target_sources(Searching
 )
 
 target_include_directories(
-    Sorting
+    Searching
     INTERFACE
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>"
