Fixed typo in Searching CMake

--- a/searching/CMakeLists.txt
+++ b/searching/CMakeLists.txt
@@ -15,7 +15,7 @@ target_sources(Searching
 target_include_directories(
     Searching
     INTERFACE
-    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>"
 )
 
