Update BinaryAdder to be a Template

--- a/generic/CMakeLists.txt
+++ b/generic/CMakeLists.txt
@@ -1,14 +1,26 @@
-add_library(GenericAlgorithms STATIC)
+add_library(Generic INTERFACE)
+target_compile_features(Generic INTERFACE cxx_std_17)
+
+set(HeaderFiles include/BinaryAdder.h)
+set(TemplateDefinitions include/BinaryAdder.tpp)
 
 target_sources(
-    GenericAlgorithms
-    PRIVATE
-        src/BinaryAdder.cpp
+    Generic
+    INTERFACE
+    ${HeaderFiles} ${TemplateDefinitions}
+)
 
-    PUBLIC
-    FILE_SET HEADERS
-    BASE_DIRS
-        include/
-    FILES
-        include/BinaryAdder.h
+target_include_directories(
+    Generic
+    INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_DEFAULT_SOURCE_DIR}/include>"
+    "$<INSTALL_INTERFACE:include>"
+)
+
+source_group("Templates" FILES ${TemplateDefinitions})
+
+add_custom_target(GenericAlgorithms
+    ALL
+    SOURCES
+        ${HeaderFiles} ${TemplateDefinitions}
 )
