--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(Tests)
 
 set(SearchTestSources "src/searching/LinearSearchTest.cpp")
-set(SortTestSources "src/sorting/InsertionSortTest.cpp")
+set(SortTestSources "src/sorting/InsertionSortTest.cpp" "src/generic/Test.cpp")
 set(GenericTestSources "src/generic/BinaryAdderTests.cpp")
 
 
@@ -20,7 +20,7 @@ target_link_libraries(
     Generic
     GTest::gtest_main
 )
-
+ 
 enable_testing()
 include(GoogleTest)
 gtest_discover_tests(Tests)
