--- a/sorting/CMakeLists.txt
+++ b/sorting/CMakeLists.txt
@@ -6,11 +6,11 @@ target_compile_features(Sorting INTERFACE cxx_std_17)
 
 
 set(HeaderFolder "include/")
-set(HeaderFiles "InsertionSort.h;SelectionSort.h;RecursiveInsertionSort.h")
+set(HeaderFiles "InsertionSort.h;SelectionSort.h;RecursiveInsertionSort.h;BinaryInsertionSort.h")
 list(TRANSFORM HeaderFiles PREPEND ${HeaderFolder})
 
 set(TemplateDefinitionsFolder "include/")
-set(TemplateDefinitionsFiles "InsertionSort.tpp;SelectionSort.tpp;RecursiveInsertionSort.tpp")
+set(TemplateDefinitionsFiles "InsertionSort.tpp;SelectionSort.tpp;RecursiveInsertionSort.tpp;BinaryInsertionSort.tpp")
 list(TRANSFORM TemplateDefinitionsFiles PREPEND ${TemplateDefinitionsFolder})
 
 # message(${TemplateDefinitionsFiles})
