--- a/generic/CMakeLists.txt
+++ b/generic/CMakeLists.txt
@@ -1,8 +1,11 @@
 add_library(Generic INTERFACE)
 target_compile_features(Generic INTERFACE cxx_std_17)
 
-set(HeaderFiles include/BinaryAdder.h)
-set(TemplateDefinitions include/BinaryAdder.tpp)
+set(HeaderDirectory "include/")
+set(HeaderFiles BinaryAdder.h TwoSum.h)
+list(TRANSFORM HeaderFiles PREPEND ${HeaderDirectory})
+set(TemplateDefinitionFiles BinaryAdder.tpp TwoSum.tpp)
+list(TRANSFORM TemplateDefinitionFiles PREPEND ${HeaderDirectory})
 
 target_sources(
     Generic
@@ -10,7 +13,7 @@ target_sources(
     FILE_SET HEADERS
     BASE_DIRS include
     FILES
-        ${HeaderFiles} ${TemplateDefinitions}
+        ${HeaderFiles} ${TemplateDefinitionFiles}
 )
 
 target_include_directories(
@@ -20,11 +23,11 @@ target_include_directories(
     "$<INSTALL_INTERFACE:include>"
 )
 
-source_group("Templates" FILES ${TemplateDefinitions})
+source_group("Templates" FILES ${TemplateDefinitionFiles})
 
 add_custom_target(
     GenericAlgorithms
     ALL
     SOURCES
-        ${HeaderFiles} ${TemplateDefinitions}
+        ${HeaderFiles} ${TemplateDefinitionFiles}
 )
