Add Divide and Conquer project. Add Max Sum Subarray files. Refactor tests into source groups

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(sorting)
 add_subdirectory(searching)
 add_subdirectory(generic)
 add_subdirectory(playground)
+add_subdirectory(divide-and-conquer)
 add_subdirectory(tests)
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Playground)
