--- a/divide-and-conquer/CMakeLists.txt
+++ b/divide-and-conquer/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(DivideAndConquer INTERFACE)
 
-target_compile_options(DivideAndConquer INTERFACE cxx_std_20)
+target_compile_features(DivideAndConquer INTERFACE cxx_std_20)
 
 set(IncludeDirectory "include/")
 set(HeaderFiles "MaxSumSubarray.h")
