--- a/benchmark-suite/CMakeLists.txt
+++ b/benchmark-suite/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(Benchmark)
+add_executable(BenchmarkSuite)
 
 # DAC -> Divide And Conquer
 set(DACDirectory "src/DivideAndConquer/")
@@ -6,15 +6,17 @@ set(DACFiles "MaxSumSubArrayBenchmarks.cpp")
 list(TRANSFORM DACFiles PREPEND ${DACDirectory})
 
 target_sources(
-    Benchmark
+    BenchmarkSuite
     PRIVATE
     ${DACFiles}
 )
 
 target_link_libraries(
-    Benchmark
+    BenchmarkSuite
     PRIVATE
     DivideAndConquer
+    benchmark::benchmark
+    benchmark::benchmark_main
 )
 
 source_group("Source Files\\Divide and Conquer" FILES ${DACFiles})
